# gpt_project

./: .gitignore  Dockerfile  alembic.ini  auth_routers.py  database.py  docker-compose.yaml  main.py  mika.py  models.py  pro[1].tex  pro[2].tex  pro[2].xwm  pyproject.toml  req.txt  requirements.txt  schemas.py  template-1.py  template.py  to-do
alembic/: env.py
alembic/versions/: 5ec05c01b275_revise.py  f20d61d4615c_initial_migration.py
app/: auth.py  celery_app.py  config.py  database.py  models.py  project.py  schemas.py  word.py
app/api_router/: pdf_router.py  user_response_router.py  user_router.py
app/crud/: crud_pdf.py  crud_user.py  crud_user_response.py
app/database/: admin.py  db.py  models.py
app/schemas/: schemas.py
app/services/: gpt_prompts.py  pdf_generator.py
app/tasks/: email.py  pdf.py
app/templates/: template.html
migration/: env.py
migration/versions/: c0052b4e749b_initial_migration.py
monitoring/prometheus/: prometheus.yml
tests/: conftest.py  test_api.py  test_db.py
