[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["Mikulya3 <kadirbekova43@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.14"
aiosignal = "1.4.0"
aiosmtplib = "3.0.2"
alembic = "1.16.4"
amqp = "5.3.1"
annotated-types = "0.7.0"
anyio = "4.9.0"
attrs = "25.3.0"
authx = "1.4.3"
bcrypt = "4.0.1"
billiard = "4.2.1"
blinker = "1.9.0"
brotli = "1.1.0"
celery = "5.5.3"
certifi = "2025.7.14"
cffi = "1.17.1"
click = "8.2.1"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1.2"
click-repl = "0.3.0"
cryptography = "45.0.5"
cssselect2 = "0.8.0"
distro = "1.9.0"
dnspython = "2.7.0"
ecdsa = "0.19.1"
email-validator = "2.2.0"
fastapi = "^0.111.1"
fastapi-mail = "1.5.0"
fastapi-security = "0.1.0"
fonttools = "4.58.5"
frozenlist = "1.7.0"
greenlet = "3.2.3"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
jiter = "0.10.0"
kombu = "5.5.4"
mako = "1.3.10"
markupsafe = "3.0.2"
multidict = "6.6.3"
numpy = "2.3.1"
openai = "1.95.1"
packaging = "25.0"
pandas = "2.3.1"
passlib = "1.7.4"
pillow = "11.3.0"
prompt-toolkit = "3.0.51"
propcache = "0.3.2"
psycopg2-binary = "2.9.10"
pyasn1 = "0.6.1"
pycparser = "2.22"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
pydantic-core = "2.33.2"
pydyf = "0.11.0"
pyjwt = "2.10.1"
pyphen = "0.17.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
python-jose = "3.5.0"
python-multipart = "0.0.20"
pytz = "2025.2"
redis = "6.2.0"
rsa = "4.9.1"
six = "1.17.0"
sniffio = "1.3.1"
sqladmin = "0.21.0"
sqlalchemy = "2.0.41"
tinycss2 = "1.4.0"
tinyhtml5 = "2.0.0"
tqdm = "4.67.1"
typing-inspection = "0.4.1"
typing-extensions = "4.14.1"
tzdata = "2025.2"
uvicorn = "^0.29.0"
vine = "5.1.0"
wcwidth = "0.2.13"
weasyprint = "65.1"
webencodings = "0.5.1"
wtforms = "3.1.2"
yarl = "1.20.1"
zopfli = "0.2.3.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
